@@ -251,6 +251,7 @@ LSP
 LUA
 
 • |vim.wait()| returns the callback results.
+• |vim.filetype.match()| now takes `fast` option to perform fast detection.
 • Lua type annotations for `vim.uv`.
 • |vim.hl.range()| now allows multiple timed highlights.
 • |vim.tbl_extend()| and |vim.tbl_deep_extend()| now accept a function behavior argument.
